deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animals-hare
spec:
  selector:
    matchLabels:
      app: animals
  replicas: 2 
  template: 
    metadata:
      labels:
        app: animals
    spec:
      containers:
      - name: animals
        image: supergiantkir/animals:hare
        ports:
        - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animals-bear
spec:
  selector:
    matchLabels:
      app: animals
  replicas: 1 
  template: 
    metadata:
      labels:
        app: animals
    spec:
      containers:
      - name: animals
        image: supergiantkir/animals:bear
        ports:
        - containerPort: 8080
