deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-music
spec:
  selector:
    matchLabels:
      app: spring-music
  replicas: 2 
  template: 
    metadata:
      labels:
        app: spring-music
    spec:
      containers:
      - name: spring-music
        image: yanivomc/spring-music:latest
        ports:
        - containerPort: 8080
