pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  containers:
  - name: app1
    image: supergiantkir/animals:bear
    volumeMounts:
    - name: app-storage
      mountPath: /storage
  - name: app2 
    image: yanivomc/spring-music:latest 
    volumeMounts:
    - name: app-storage
      mountPath: /storage
  volumes:
  - name: app-storage
    hostPath:
      # directory location on host
      path: /tmp/files
