statefullset.yaml

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: animals-hare
spec:
  selector:
    matchLabels:
      app: animals
  replicas: 1 
  template: 
    metadata:
      labels:
        app: animals
    spec:
      containers:
      - name: animals
        image: supergiantkir/animals:hare
        ports:
        - containerPort: 80
